WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278115
Fix incorrect parenthesization of OpcodeOrigin assertion
https://bugs.webkit.org/show_bug.cgi?id=278115
Summary
Fix incorrect parenthesization of OpcodeOrigin assertion
daniel_liu4
Reported
2024-08-14 10:22:09 PDT
This patch fixes an incorrect parenthesization of OpcodeOrigin's assertion, which reversed the order `&` and `-` were being applied.
rdar://133845872
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2024-08-14 10:23:21 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32202
EWS
Comment 2
2024-08-14 11:17:17 PDT
Committed
282247@main
(56f5e3f163b7): <
https://commits.webkit.org/282247@main
> Reviewed commits have been landed. Closing PR #32202 and removing active labels.
Mark Lam
Comment 3
2024-08-14 12:02:43 PDT
This bug was caused by
https://bugs.webkit.org/show_bug.cgi?id=277681
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug