Fix incorrect parenthesization of OpcodeOrigin assertion https://bugs.webkit.org/show_bug.cgi?id=278115 rdar://133845872

Reviewed by Yusuke Suzuki, Keith Miller and Mark Lam.

The issue arises from 281900@main, which updated
```
(opcode & (1 << 24) - 1) == opcode
```
to
```
((opcode & (1 << 24)) - 1) == opcode
```

However, this changes the semantics, since `-` binds tighter
than `&`, meaning that the new code would end up calculating
either `-1` or `(1 << 24) - 1` for every case, regardless of
what the opcode is, and likely causing an error.

* Source/JavaScriptCore/wasm/WasmOpcodeOrigin.h:
(JSC::Wasm::OpcodeOrigin::OpcodeOrigin):

Canonical link: https://commits.webkit.org/282247@main